# Stock-Analyzer

./: .gitignore  Readme.md  app.js  main.js  package-lock.json  package.json
FinalProject_Java/: ReadMe.md  pom.xml
cpp_scripts/: CMakeLists.txt  ReadMe.md  Regression.h  buildSteps.txt  main.cpp  visualization.html  visulization.js
cpp_scripts/libs/: ML_Helper.cpp  ML_Helper.h  Regression.h  fileUtils.cpp  fileUtils.h
data/: INFY.csv
js_scripts/kite_connect/: historical.mjs  login.mjs
js_scripts/model_train/: technicalAnalysis_train.mjs
js_scripts/summarization/: summarize.js
model/: combi_model.h5  keras_model.h5
node_scripts/: get_historical_data.js  login.js  main.js
node_scripts/kite_connect/: historical.mjs  login.mjs
node_scripts/model_train/: technicalAnalysis_prepareData.mjs
node_scripts/public/: ML.js  chartsTemplate.js  common.css  helper.js  icons.js  index.html  index.js  testgpt.html
node_scripts/summarization/: pdf_parse.js
node_scripts/utils/: helpers.mjs  icons.mjs
python_scripts/: app.py  stock_data.csv  yahoo_finance_fundamentals.py
python_scripts/explore/: close_lstm.ipynb  linearRegression.ipynb  lstm.ipynb
python_scripts/src/: LSTM_Visualized.ipynb  app_helper.py  emotes.py  train.py
python_scripts/templates/: index.html
scripts/kite_connect/: historical.mjs  login.mjs
scripts/model_train/: multilinear_regression.mjs  technicalAnalysis_prepareData.mjs  technicalAnalysis_train.mjs  technicalindicators.mjs  train_utils.mjs
views/: index.html  main.css  main.html  main.js  utils.js  view-utils.mjs
(+10 files in other folders)
